[project]
name = "hfr"
dynamic = ["version"]
description = "Collection of scripts for hfr"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.33.1",
]

[project.scripts]
hfr-nba = "hfr.nba:main"

[build-system]
requires      = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.15.11"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812"]

[tool.hatch.version]
source = "vcs"
