[project]
name = "hfr"
dynamic = [
    "version",
]
description = "Collection of scripts for HFR"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]

[project.scripts]
nba = "hfr.nba:main"

[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    "COM812",
    "G004",
]
